# boot-dev-static-site

./: .gitignore  build.sh  main.sh  pyproject.toml  test.sh
boot_static_site/: blockmarkdown.py  htmlnode.py  leafnode.py  main.py  parentnode.py  textnode.py
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
server/public/: index.html
src/: blocks.py  htmlnode.py  leafnode.py  main.py  nodefunctions.py  parentnode.py  test_block_to_block_type.py  test_extract_md_title.py  test_htmlnode.py  test_image_and_link_extraction.py  test_leafnode.py  test_markdown_to_blocks.py  test_md_to_html.py  test_parentnode.py  test_split_nodes_delimiter.py  test_text_to_html.py  test_textnode.py  textnode.py
tests/: test_blockmarkdown.py  test_htmlnode.py  test_leafnode.py  test_parentnode.py  test_textnode.py
