[tool.poetry]
name = "boot-static-site"
version = "0.1.0"
description = ""
authors = ["Tyler Moson <tyler.p.moson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"